@@ -52,7 +52,7 @@ all:
 prod:
   .settings:
     no_script_name:         on
-    logging_enabled:        off
+    logging_enabled:        on
 
 dev:
   .settings:
